--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ros2launch
-	previous = 
-	base = 47ce1fdba83d
+	previous = 47ce1fdba83d
+	base = 3e250582c7cd
 	trim = 
 	trimbase = 
