--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/launch_testing_ros
-	previous = 
-	base = 2d1991f6105e
+	previous = 2d1991f6105e
+	base = 0556f0ad2b9a
 	trim = 
 	trimbase = 
