--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/launch_ros
-	previous = 
-	base = 6b35ec131ecd
+	previous = 6b35ec131ecd
+	base = 4e5cec78fd04
 	trim = 
 	trimbase = 
