--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/launch_ros
+	parent = release/rolling/launch_ros/0.26.4-2
 	previous = 6b35ec131ecd
 	base = fa667cf3750f
 	trim = 
