--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/ros2launch
+	parent = release/rolling/ros2launch/0.26.4-2
 	previous = 47ce1fdba83d
 	base = f24d3d0b95ba
 	trim = 
