--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/launch_testing_ros
+	parent = release/rolling/launch_testing_ros/0.26.4-2
 	previous = 2d1991f6105e
 	base = dec4586444af
 	trim = 
